--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </body>
 <script>
     let datetxt = "18 November 2009";
-    let datatxtletter = " Happy Birthday :)I don’t say this often, but you genuinely make my days a little brighter just by being around. I hope this year gives you everything you quietly wish for. Stay the way you are — it suits you more than you realise.I know it’s cringe.💕";
+    let datatxtletter = " Happy Birthday :)I don’t say this often, but you genuinely make my days a little brighter just by being around. I hope this year gives you everything you quietly wish for. Stay the way you are — it suits you more than you realise.'I know it’s cringe'💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
